<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Background image -->

    <!-- TextView for "Welcome to" -->

    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/signin_bg" />

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to"
        android:fontFamily="@font/yellowtail"
        android:textSize="45sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:rotation="-10" />

    <!-- TextView for "FUREVER" -->
    <TextView
        android:id="@+id/fureverTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="FUREVER"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_below="@id/welcomeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <!-- TextView for "HOME" -->
    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fureverTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-12dp"
        android:text="HOME"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold" />

    <!-- TextView for "Please sign in!" -->
    <TextView
        android:id="@+id/signinTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/homeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/plz"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <!-- ImageView for the logo -->

    <!-- EditText for email -->

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="143dp"
        android:layout_height="133dp"
        android:layout_centerInParent="true"
        android:scaleType="centerInside"
        android:src="@drawable/logo"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="235dp" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:hint="@string/Email"
        android:textColorHint="#EFB6BD"
        android:background="@drawable/border"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="12dp"
        />

    <!-- EditText for password -->

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/border"
        android:hint="@string/Password1"
        android:inputType="textPassword"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingRight="8dp"
        android:paddingLeft="12dp"        android:textColorHint="#EFB6BD" />

    <ImageButton
        android:id="@+id/SI_login"
        android:layout_width="283dp"
        android:layout_height="96dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="74dp"
        android:background="#FFFDFE"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SUconfirmPass"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/new_project__4_"
        tools:ignore="UnknownIdInLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="49dp"
        android:text="@string/dont"
        android:textColor="#763941"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SI_login"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/forgetButton"
        android:layout_width="168dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="212dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="158dp"
        android:background="@drawable/log"
        android:text="@string/forgot_password"
        android:textColor="#763941"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SI_login" />

    <Button
        android:id="@+id/signup"
        android:layout_width="106dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/log"
        android:text="@string/signup"
        android:textColor="#BB6570"
        android:textSize="13dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.737"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SI_login" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="163dp"
        android:text="@string/Remember_me"
        android:textColor="#763941" />



</RelativeLayout>
